Trabalho atualizado | Nome equipe na URL e nome do integrante na descrição das APIs

--- a/src/db/appointments.json
+++ b/src/db/appointments.json
@@ -1,10 +1,34 @@
 [
-    {
-    "id": "7a6cc1282c5f6ec0235acd2bfa780145aa2a67fd",
-    "specialty": "Fisioterapeuta",
-    "comments": "Realizar sessão",
-    "date": "2023-08-15 16:00:00",
-    "student": "Bingo Heeler",
-    "professional": "Winton Blake"
-    }
-    ]
+  {
+    "id": "",
+    "specialty": "Massoterapeuta",
+    "comments": "Realizada",
+    "date": "2024-07-25 16:00:00",
+    "student": "Matheus",
+    "professional": "Medico"
+  },
+  {
+    "id": "",
+    "specialty": "Massoterapeuta",
+    "comments": "Realizada",
+    "date": "2024-07-25 16:00:00",
+    "student": "Matheus",
+    "professional": "Medico"
+  },
+  {
+    "id": "b4666395-c9ea-4e38-bfa5-52726037517c",
+    "specialty": "Massoterapeuta",
+    "comments": "Realizada",
+    "date": "2024-07-25 16:00:00",
+    "student": "Matheus",
+    "professional": "Medico"
+  },
+  {
+    "id": "50b8378d-d731-43b0-919f-bf7dd9674951",
+    "specialty": "fisiologia",
+    "comments": "Realizada",
+    "date": "2024-07-25 16:00:00",
+    "student": "Matheus",
+    "professional": "Medico"
+  }
+]
